# FloatSort

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GITHUB_ACTIONS_GUIDE.md  LICENSE  Mini悬浮窗功能说明.md  Mini窗口快速测试.md  PROJECT_OPTIMIZATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REGEX_CAPTURE_GUIDE.md  SCHEDULE_DESIGN.md  SCHEDULE_TEST_GUIDE.md  SECURITY.md  UI优化_2025-10-28.md  V2.2功能升级计划.md  V2.5快速测试.md  V2.7界面简化更新.md  V2.8.1修复说明.md  V2.9完整功能说明.md  V2开发进度.md  V2快速开始.md  V2架构设计.md  rustfmt.toml  开发总结_2025-10-28.md  开始开发.bat  当前进展和下一步.md  快速安装指南.md  测试指南.md  监控功能说明.md  编译错误修复.md  规则排序和Mini窗口开发进度.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
archive/: HOW_TO_RUN.md  PROJECT_SUMMARY.md  开发总结.md  规则编辑功能测试指南.md  项目完成总结.md
docs/: ARCHITECTURE.md  BUILD.md  DEVELOPMENT.md  FAQ.md  FEATURES.md  README.md  USER_GUIDE.md
docs/features/: Mini窗口拖拽修复.md  托盘功能说明.md  批量预览功能说明.md  拖拽功能说明.md  极简风格更新说明.md
docs/history/: V2.2功能完成报告.md  V2.3功能完成报告.md  V2.5功能更新说明.md  V2.8完整更新说明.md  V2.8更新进度.md  V2完成报告.md
docs/troubleshooting/: 无限循环BUG修复说明.md
scripts/: build-cn.bat  build.ps1  build.sh  dev.ps1  dev.sh  finalize-structure.bat  organize-docs.bat  organize-docs.ps1
src-tauri/: Cargo.toml  create_icon.ps1  create_simple_icon.ps1  tauri.conf.json
src-tauri/icons/: create_icon.ps1  create_valid_icon.ps1  icon.icns
src-tauri/src/: activity_log.rs  config.rs  file_monitor.rs  file_ops.rs  i18n.rs  main.rs  models.rs  rule_engine.rs  scheduler.rs  window_snap.rs
ui/: app.js  app_v2.js  index.html  index_v1_backup.html  index_v2.html  rule_groups.js  rule_icons.js  styles.css  styles_minimal.css  styles_v2.css
ui/locales/: en-US.json  ja-JP.json  zh-CN.json
