[package]
name = "floatsort"
version = "0.3.0"
description = "智能悬浮文件整理器 - Smart Floating File Organizer"
authors = ["FloatSort Contributors"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [], default-features = false }

[dependencies]
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "path-all", "shell-open", "window-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"
fs_extra = "1.3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
regex = "1.10"
image = "0.24"
trash = "3.0"
once_cell = "1.19"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true


